user ui conflict fix, dialog text overflow fix

--- a/src/app/core/_layouts/layout/layout.component.scss
+++ b/src/app/core/_layouts/layout/layout.component.scss
@@ -107,6 +107,7 @@ app-side-bar {
   visibility: hidden;
   opacity: 0;
   width: 0;
+  width: 0;
 
   @media (min-width: 550px) {
     visibility: visible;
